--- a/products.css
+++ b/products.css
@@ -1,3 +1,61 @@
 header{
     background: #BBBBBB;
+    padding: ;
+}
+
+.container{
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+
+nav{
+    position: absolute;
+    margin: 0 0 0 15px;
+    top: 110px;
+    right: 0;
+
+
+}
+
+nav li{
+    display: inline;
+    
+}
+
+nav a{
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+.services{
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0; /*cimaBaixo, direita-esquerda*/
+}
+
+.services li{
+    display: inline-block;
+    width: 30%;
+
+    text-align: center;
+    vertical-align: top;
+    margin: 0 1.5px;
+}
+
+.services H2{
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.services-desc{
+    font-size: 18px;
+}
+
+.services-price{
+    font-size: 22px;
+    font-weight: bold;
 }
