--- a/contact.css
+++ b/contact.css
@@ -46,3 +46,17 @@ main{
 
 }
 
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+tr, th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
+}
