--- a/home.css
+++ b/home.css
@@ -2,9 +2,8 @@
     width: 100%;
 }
 
-main{
-    width: 940px;  
-    margin: auto;
+main {
+    
  }
 
 .title-prin {
@@ -12,6 +11,33 @@ main{
     font-size: 2em; /*2em significa que o tamanho vai ser duas vezes maior que o texto base*/
     margin: 0 0 1em; /*espaçamento proporcional a fonte (cima-baixo)*/
     clear: left; /*Limpa o float*/
+    font-weight: bolder;
+/* 
+    color: rgba(0, 0, 0, 0.3); Opacidade em cores
+*/
+}
+
+.title-prin:first-letter {
+    font-weight: bold;
+}
+
+/*
+.title-prin:before {
+    content: ;
+
+}
+
+.title-prin:after {
+
+}
+*/
+
+.main-container-about {
+    padding: 3em 0;
+    background: #ffffff;
+
+    width: 940px;  
+    margin: auto;
 }
 
 .main-container-about p {
@@ -28,6 +54,14 @@ main{
 
 .benefits-img {
     width: 60%;
+    opacity: 1; /*opacidade de 30%*/
+    transition: 400ms;
+
+    box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.benefits-img:hover {
+    opacity: 0.3;
 }
 
 .img-utensilios {
@@ -36,12 +70,19 @@ main{
     margin: 0 20px 20px 0;
 }
 
+.mapa-center {
+    width: 940px;  
+    margin: auto;
+}
+
 .maps {
-    padding: 3em 0 0;
+    padding: 3em 0; 
+    background: linear-gradient(#fefefe, #888888);
 }
 
 .beneficios {
     padding: 3em 0;
+    background: #888888;
 }
 
 .maps p {
@@ -61,7 +102,37 @@ main{
     vertical-align: top;
 }
 
+.itens {
+    line-height: 1.5; /*altura da linha*/
+}
+
+.itens:before {
+    content: "★ ";
+}
+
 .video {
     width: 560px;
     margin: 2em auto; /*centralizando(2em p cima e p baixo e automatico para os lados)*/
 }
+
+
+ /* Seletores avançados
+main > p {
+    background: blue;
+}
+
+img + p {
+    background: red;
+}
+
+img ~ p {
+    background: yellow; 
+}
+
+.principal p:not(#missao) {
+    background: orange
+}
+*/
+
+
+
