--- a/home.css
+++ b/home.css
@@ -72,7 +72,7 @@ main {
 
 .mapa-center {
     width: 940px;  
-    margin: auto;
+    margin: 0 auto;
 }
 
 .maps {
@@ -91,7 +91,6 @@ main {
 }
 
 .conteudo-beneficios {
-    background: ;
     width: 640px;
     margin: 0 auto; /*automatico*/
 }
@@ -133,6 +132,23 @@ img ~ p {
     background: orange
 }
 */
+
+@media screen and (max-width: 480px) {
+    .header-container, .main-container-about, .mapa-center, .conteudo-beneficios, .video{
+        width: auto;
+    }
+
+    h1 {
+		text-align: center;
+	}
+
+	nav {
+		position: static;
+	}
+    .lista-beneficios, .benefits-img {
+		width: 100%;
+	}
+}
 
 
 
