--- a/services.css
+++ b/services.css
@@ -1,3 +1,8 @@
+.services-container {
+    display: list-items;
+    
+}
+
 .services {
     width: 940px;
     margin: 0 auto;
@@ -44,3 +49,4 @@
     font-weight: bold;
     padding-top: 10px;
 }
+
